some style changes

--- a/src/app/components/first-component/first-component.component.html
+++ b/src/app/components/first-component/first-component.component.html
@@ -1,6 +1,6 @@
 
 <div class="main">
-        <p>first-component works!</p>
+        <p>first-component</p>
             <label for="first">Firstname:</label>
             <input type="text"  [(ngModel)]="user.firstName" placeholder="Enter your Firstname" required>
 
