--- a/src/app/components/third-component/third-component.component.html
+++ b/src/app/components/third-component/third-component.component.html
@@ -1,4 +1,7 @@
-<p>third-component works!</p>
 
-<h3>Firstname:-<i>{{currentValue?.firstName}}</i></h3>
-<h3>Lastname:-<i>{{currentValue?.lastName}}</i></h3>
+
+<div class="main">
+    <p>third-component</p>
+    <h3>Firstname:-<i>{{currentValue?.firstName}}</i></h3>
+    <h3>Lastname:-<i>{{currentValue?.lastName}}</i></h3>
+</div>
