--- a/src/app/components/second-component/second-component.component.html
+++ b/src/app/components/second-component/second-component.component.html
@@ -1,4 +1,6 @@
-<p>second-component works!</p>
 
-<h3>Firstname:-<i>{{currentValue?.firstName}}</i></h3>
-<h3>Lastname:-<i>{{currentValue?.lastName}}</i></h3>
+<div class="main">
+    <p>second-component</p>
+    <h3>Firstname:-<i>{{currentValue?.firstName}}</i></h3>
+    <h3>Lastname:-<i>{{currentValue?.lastName}}</i></h3>
+</div>
